加了个swagger,改了下menu的删除api，不用+id了
